--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,6 @@
 .card {
   display: inline-block;
   text-align: center;
-  width: 3em;
   font-size: 2em;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   margin: 1em;
@@ -50,4 +49,10 @@
  .activeCard {
   color: red;
   background: pink;
+ }
+
+ .textHeader {
+   font-size: 2em;
+   color: red;
+   text-align: center;
  }
